modify docker files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,3 +25,5 @@ services:
       QUEUE_DRIVER: ${QUEUE_DRIVER}
     volumes:
       - ./:/var/www/html
+    command: >
+      sh -c "composer install && php artisan serve --host=0.0.0.0 --port=8000"
