--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: Anagkazo-Backend
+    container_name: "Anagkazo-Backend"
     restart: unless-stopped
     ports:
       - "8000:80"
