--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "php-amqplib/php-amqplib": "^3.5"
+        "php-amqplib/php-amqplib": "^3.5",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
