--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "laravel/tinker": "^2.8",
         "php-amqplib/php-amqplib": "^3.5",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3",
-        "cloudinary-labs/cloudinary-laravel": "2.0.0"
+        "cloudinary-labs/cloudinary-laravel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
