--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.8",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
+        "maatwebsite/excel": "^3.1",
         "php-amqplib/php-amqplib": "^3.5",
         "vladimir-yuldashev/laravel-queue-rabbitmq": "^13.3"
     },
